--- a/FizzBuzz.ipynb
+++ b/FizzBuzz.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "FizzBuzz.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTtvxfyiZ+6uEzea/XeyB8",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMiifsa0NbRNpQt+9hXFbbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +38,8 @@
         "2. one member will start from any number.  ex: starting with: 1\n",
         "3. a number divided by 3 should be uttered as Fizz. Ex: 3, 6, 9.. should be uttered as Fizz\n",
         "4. a number divided by 5 should be uttered as Buzz. Ex: 5,10,15... should be uttered as Buzz\n",
-        "5. and if a number is divided by both 3 and 5 should be uttered as FizzBuzz. Ex: 15, 30.. should be uttered as FizzBuzz"
+        "5. and if a number is divided by both 3 and 5 should be uttered as FizzBuzz. Ex: 15, 30.. should be uttered as FizzBuzz\n",
+        "6. now, the game will be like: '1', '2', 'Fizz', '4', 'Buzz', 'Fizz', '7', '8', 'Fizz', 'Buzz', '11', 'Fizz', '13', '14', 'FizzBuzz'..... goes on"
       ]
     },
     {
@@ -54,8 +56,8 @@
       "source": [
         "#Python code on FizzBuzz\n",
         "import time\n",
-        "a = input('enter a stating number')\n",
-        "b = input('enter an ending number')\n",
+        "a = input('enter a stating number = ')\n",
+        "b = input('enter an ending number = ')\n",
         "t0 = time.clock()\n",
         "a = int(a)\n",
         "b = int(b)\n",
