--- a/FizzBuzz.ipynb
+++ b/FizzBuzz.ipynb
@@ -49,9 +49,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 850
         },
-        "outputId": "435107a5-f027-4f17-aabb-daf224acbb12"
+        "outputId": "b04128e0-0691-44d1-c8d9-5db466700ebd"
       },
       "source": [
         "#Python code on FizzBuzz\n",
@@ -74,15 +74,13 @@
         "t1 = time.clock()-t0\n",
         "print(\"the time taken for computing this program = \",t1,\"seconds\")"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter a stating number3\n",
-            "enter an ending number120\n",
-            "the number 3 is Fizz\n",
-            "the number 3 is not a multiple of either 3 or 5\n",
+            "enter a stating number = 4\n",
+            "enter an ending number = 40\n",
             "the number 4 is not a multiple of either 3 or 5\n",
             "the number 5 is Buzz\n",
             "the number 6 is Fizz\n",
@@ -129,108 +127,7 @@
             "the number 38 is not a multiple of either 3 or 5\n",
             "the number 39 is Fizz\n",
             "the number 39 is not a multiple of either 3 or 5\n",
-            "the number 40 is Buzz\n",
-            "the number 41 is not a multiple of either 3 or 5\n",
-            "the number 42 is Fizz\n",
-            "the number 42 is not a multiple of either 3 or 5\n",
-            "the number 43 is not a multiple of either 3 or 5\n",
-            "the number 44 is not a multiple of either 3 or 5\n",
-            "the number 45 is FizzBuzz\n",
-            "the number 46 is not a multiple of either 3 or 5\n",
-            "the number 47 is not a multiple of either 3 or 5\n",
-            "the number 48 is Fizz\n",
-            "the number 48 is not a multiple of either 3 or 5\n",
-            "the number 49 is not a multiple of either 3 or 5\n",
-            "the number 50 is Buzz\n",
-            "the number 51 is Fizz\n",
-            "the number 51 is not a multiple of either 3 or 5\n",
-            "the number 52 is not a multiple of either 3 or 5\n",
-            "the number 53 is not a multiple of either 3 or 5\n",
-            "the number 54 is Fizz\n",
-            "the number 54 is not a multiple of either 3 or 5\n",
-            "the number 55 is Buzz\n",
-            "the number 56 is not a multiple of either 3 or 5\n",
-            "the number 57 is Fizz\n",
-            "the number 57 is not a multiple of either 3 or 5\n",
-            "the number 58 is not a multiple of either 3 or 5\n",
-            "the number 59 is not a multiple of either 3 or 5\n",
-            "the number 60 is FizzBuzz\n",
-            "the number 61 is not a multiple of either 3 or 5\n",
-            "the number 62 is not a multiple of either 3 or 5\n",
-            "the number 63 is Fizz\n",
-            "the number 63 is not a multiple of either 3 or 5\n",
-            "the number 64 is not a multiple of either 3 or 5\n",
-            "the number 65 is Buzz\n",
-            "the number 66 is Fizz\n",
-            "the number 66 is not a multiple of either 3 or 5\n",
-            "the number 67 is not a multiple of either 3 or 5\n",
-            "the number 68 is not a multiple of either 3 or 5\n",
-            "the number 69 is Fizz\n",
-            "the number 69 is not a multiple of either 3 or 5\n",
-            "the number 70 is Buzz\n",
-            "the number 71 is not a multiple of either 3 or 5\n",
-            "the number 72 is Fizz\n",
-            "the number 72 is not a multiple of either 3 or 5\n",
-            "the number 73 is not a multiple of either 3 or 5\n",
-            "the number 74 is not a multiple of either 3 or 5\n",
-            "the number 75 is FizzBuzz\n",
-            "the number 76 is not a multiple of either 3 or 5\n",
-            "the number 77 is not a multiple of either 3 or 5\n",
-            "the number 78 is Fizz\n",
-            "the number 78 is not a multiple of either 3 or 5\n",
-            "the number 79 is not a multiple of either 3 or 5\n",
-            "the number 80 is Buzz\n",
-            "the number 81 is Fizz\n",
-            "the number 81 is not a multiple of either 3 or 5\n",
-            "the number 82 is not a multiple of either 3 or 5\n",
-            "the number 83 is not a multiple of either 3 or 5\n",
-            "the number 84 is Fizz\n",
-            "the number 84 is not a multiple of either 3 or 5\n",
-            "the number 85 is Buzz\n",
-            "the number 86 is not a multiple of either 3 or 5\n",
-            "the number 87 is Fizz\n",
-            "the number 87 is not a multiple of either 3 or 5\n",
-            "the number 88 is not a multiple of either 3 or 5\n",
-            "the number 89 is not a multiple of either 3 or 5\n",
-            "the number 90 is FizzBuzz\n",
-            "the number 91 is not a multiple of either 3 or 5\n",
-            "the number 92 is not a multiple of either 3 or 5\n",
-            "the number 93 is Fizz\n",
-            "the number 93 is not a multiple of either 3 or 5\n",
-            "the number 94 is not a multiple of either 3 or 5\n",
-            "the number 95 is Buzz\n",
-            "the number 96 is Fizz\n",
-            "the number 96 is not a multiple of either 3 or 5\n",
-            "the number 97 is not a multiple of either 3 or 5\n",
-            "the number 98 is not a multiple of either 3 or 5\n",
-            "the number 99 is Fizz\n",
-            "the number 99 is not a multiple of either 3 or 5\n",
-            "the number 100 is Buzz\n",
-            "the number 101 is not a multiple of either 3 or 5\n",
-            "the number 102 is Fizz\n",
-            "the number 102 is not a multiple of either 3 or 5\n",
-            "the number 103 is not a multiple of either 3 or 5\n",
-            "the number 104 is not a multiple of either 3 or 5\n",
-            "the number 105 is FizzBuzz\n",
-            "the number 106 is not a multiple of either 3 or 5\n",
-            "the number 107 is not a multiple of either 3 or 5\n",
-            "the number 108 is Fizz\n",
-            "the number 108 is not a multiple of either 3 or 5\n",
-            "the number 109 is not a multiple of either 3 or 5\n",
-            "the number 110 is Buzz\n",
-            "the number 111 is Fizz\n",
-            "the number 111 is not a multiple of either 3 or 5\n",
-            "the number 112 is not a multiple of either 3 or 5\n",
-            "the number 113 is not a multiple of either 3 or 5\n",
-            "the number 114 is Fizz\n",
-            "the number 114 is not a multiple of either 3 or 5\n",
-            "the number 115 is Buzz\n",
-            "the number 116 is not a multiple of either 3 or 5\n",
-            "the number 117 is Fizz\n",
-            "the number 117 is not a multiple of either 3 or 5\n",
-            "the number 118 is not a multiple of either 3 or 5\n",
-            "the number 119 is not a multiple of either 3 or 5\n",
-            "the time taken for computing this program =  0.046495000000000175 seconds\n"
+            "the time taken for computing this program =  0.005952000000000179 seconds\n"
           ],
           "name": "stdout"
         }
